service-entry/service_entry.yaml
# Egress Traffic 
# First make istio config map changes and egress to REGISTER_ONLY.

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata: 
  name: external-svc-https-out-of-mesh
spec:
  hosts:
    - "www.google.com"
    - "httpbin.org"
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---
kind: VirtualService
metadata:
  name: httpbin-ext
spec:
  hosts:
    - httpbin.org
  http:
  - timeout: 3s
    route:
      - destination:
          host: httpbin.org
        weight: 100

#https://istio.io/latest/docs/tasks/traffic-management/egress/egress-control/
